--- a/index.html
+++ b/index.html
@@ -189,6 +189,6 @@
 	</script>
 </head>
 <body>
-	<canvas id="canvas" resize></canvas>
+	<canvas id="canvas" style="width: 100%; height: 100%; background-color: black"></canvas>
 </body>
 </html>
