--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 	</script>
 </head>
 <body>
-	<canvas id="myCanvas" style="width: 100%; height: 100%; background-color: black"></canvas>
+	<h1 style="text-align: center">Tap A to Z to have fun</h1>
+	<canvas id="myCanvas" style="width: 100%; height: 100vh	; background-color: black"></canvas>
 </body>
 </html>
